; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_intel_punit_ipc.c_ipc_read_data_high.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_intel_punit_ipc.c_ipc_read_data_high.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64** }

@BASE_DATA = common dso_local global i64 0, align 8
@OFFSET_DATA_HIGH = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i64)* @ipc_read_data_high to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipc_read_data_high(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i64**, i64*** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i64*, i64** %7, i64 %8
  %10 = load i64*, i64** %9, align 8
  %11 = load i64, i64* @BASE_DATA, align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @OFFSET_DATA_HIGH, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @readl(i64 %15)
  ret i32 %16
}

declare dso_local i32 @readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
